--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-这是我的主页  沈宝
+
+<html>
+<head>
+<style type="text/css">
+h1 {color:red,font-size:40px,text-align: center}
+p {color:blue,font-size:40px,text-align: center}
+</style>
+</head>
+
+<body>
+
+<h1>欢迎访问 </h1>
+<p>沈宝</p>
+</body>
+</html>
