--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ p {color:blue,font-size:40px,text-align: center}
 
 <body>
 
-<h1>欢迎访问 </h1>
+<h1 style="{color:red,font-size:40px,text-align: center}">欢迎访问 </h1>
 <p>沈宝</p>
 </body>
 </html>
