--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <style type="text/css">
-h1 {color:red,font-size:40px,text-align: center}
-p {color:blue,font-size:40px,text-align: center}
+h1 {color:red;font-size:40px;text-align: center}
+p {color:blue;font-size:40px;text-align: center}
 </style>
 </head>
 
