--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ p {color:blue;font-size:40px;text-align: center}
 <body>
 
 <h1 style="{color:red,font-size:40px,text-align: center}">欢迎访问 </h1>
-<p>沈宝</p>
+<p>这是沈宝的博客</p>
 </body>
 </html>
