--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <style type="text/css">
 h1 {color:red;font-size:40px;text-align: center}
-p {color:blue;font-size:40px;text-align: center}
+p {color:blue;font-size:16px;text-align: center}
 </style>
 </head>
 
@@ -12,5 +12,7 @@ p {color:blue;font-size:40px;text-align: center}
 
 <h1 style="{color:red,font-size:40px,text-align: center}">欢迎访问 </h1>
 <p>客官，请上座！</p>
+<p>QQ、微信：1351814223</p>
+<p>邮箱:shenbaoone@gmail.com</p>
 </body>
 </html>
