--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ p {color:blue;font-size:16px;text-align: center}
 <h1 style="{color:red,font-size:40px,text-align: center}">欢迎访问 </h1>
 <p>客官，请上座！</p>
 <p><a href="./blog">个人博客：https://shenbao.github.io/blog</a></p>
-<p><a href="./blog">团队：https://shenbao.github.io/ishehui</a></p>
+<p><a href="./ishehui">团队：https://shenbao.github.io/ishehui</a></p>
 <p>QQ、微信：1351814223</p>
 <p>邮箱:shenbaoone@gmail.com</p>
 </body>
