--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <style type="text/css">
-        h1 {color:red;font-size:40px;text-align: center}
-        p {color:blue;font-size:16px;text-align: center}
+        h1 {
+          color:red;
+          font-size:40px;
+          text-align: center}
+        p {
+          color:blue;
+          font-size:16px;
+          text-align: center
+      }
     </style>
   </head>
 
