ShenBao Blog Revision Success

--- a/about.html
+++ b/about.html
@@ -15,19 +15,17 @@ header-img: "img/config/about.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>写写代码，做做设计，<br>
-    离开世界之前，一切都是过程</p></blockquote>
+    <blockquote><p>不管路走了多远<br>
+    错了就要重新返回</p></blockquote>
 
-    <p>Hey，我是<strong>沈宝</strong>，程序员 &amp; </p>
+    <p>Hey，我是<strong>沈宝</strong>，程序员 . </p>
 
 </div>
 
 <!-- English Version -->
 <div class="en post-container">
-    <blockquote><p>Yet another Web Developer. <br>
-    Yet another Life-long Designer.</p></blockquote>
 
-    <p>Hi, I am <strong>ShenBao(沈宝)</strong>，you can call me <strong>秋思浪人</strong>. 
+    <p>Hi, I am <strong>ShenBao(沈宝)</strong>，you can call me <strong>秋思浪人</strong>. </p>
 
    
 </div>
