--- a/about.html
+++ b/about.html
@@ -18,14 +18,14 @@ header-img: "img/config/about-bg.jpg"
     <blockquote><p>不管路走了多远<br>
     错了就要重新返回</p></blockquote>
 
-    <p>Hey，我是<strong>沈宝</strong>，程序员 . </p>
+    <p>Hey，我是<strong>沈宝</strong>，web developer. </p>
 
 </div>
 
 <!-- English Version -->
 <div class="en post-container">
 
-    <p>Hi, I am <strong>ShenBao(沈宝)</strong>，you can call me <strong>秋思浪人</strong>. </p>
+    <p>Hi, I am <strong>ShenBao</strong>，web developer. </p>
 
 </div>
 
