--- a/about.html
+++ b/about.html
@@ -100,8 +100,8 @@ header-img: "img/config/about-bg.jpg"
 <div class="comment">
     <!-- This id is used for indexing my loss comments forcedly -->
     <div class="ds-thread"
-    {% if site.duoshuo_username == "huxblog" %}
-        data-thread-id="1187623191091085319"
+    {% if site.duoshuo_username == "shenbao" %}
+        data-thread-id="84a8cb32bb6145c66f02a5e76e0ac053"
     {% else %}
     <!-- U can just use this key generated to index comments at page about -->
         data-thread-key="{{site.duoshuo_username}}/about"
