--- a/about.html
+++ b/about.html
@@ -34,7 +34,9 @@ header-img: "img/config/about-bg.jpg"
     <li><strong>Name: </strong><a href="https://github.com/Shenbao">ShenBao</a></li>
     <li><strong>Mail: </strong>shenbaoone@gmail.com</li>
     <li><strong>QQ、WeChat: </strong>1351814223</li>
-    <li><strong>Blog: </strong><a href="https://shenbao.github.io/blog">在线博客</a></li>
+    <li><strong>Blog: </strong><a href="https://shenbao.github.io">在线博客</a></li>
+    <li><strong>原博客: </strong><a href="https://shenbao.github.io/blog">查看</a></li>
+    <li><strong>React技术栈: </strong><a href="https://shenbao.github.io/ishehui">查看</a></li>
     <li><strong>GitHub: </strong><a href="https://github.com/ShenBao">https://github.com/ShenBao</a></li>
 </ul>
 
