--- a/offline.html
+++ b/offline.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 description: "当前网络不可用 :("
-header-img: "img/404-bg.jpg"
+header-img: "img/config/404-bg.jpg"
 permalink: /offline.html
 ---
 
