--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "About"
+title: "About Me"
 description: "Hey, this is ShenBao."
 header-img: "img/config/about-bg.jpg"
 ---
