--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "一个热爱code的boy！撸码的乐趣 💯 ：“人没了，™代码还在”！（哈哈，开个玩笑。。。）"
+description: "一个热爱code的boy！"
 ---
 
 {% for post in paginator.posts %}
