--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@ header-img: "img/config/about-bg.jpg"
 <ul>
     <li>HTML / HTML5</li>
     <li>CSS / CSS3</li>
+    <li>LESS / SASS / SCSS / Stylus / PostCSS </li>
     <li>Jquery</li>
     <li>JavaScript / ES5 / ES6</li>
     <li>Bootstrap </li>
