--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ header-img: "img/config/about-bg.jpg"
     <li>HTML / HTML5</li>
     <li>CSS / CSS3</li>
     <li>LESS / SASS / SCSS / Stylus / PostCSS </li>
-    <li>Jquery</li>
+    <li>Jquery / Zepto</li>
     <li>JavaScript / ES5 / ES6</li>
     <li>Bootstrap </li>
     <li>React / React-router / Redux / React-Native</li>
