修改 about 评论code bug

--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@ header-img: "img/config/about-bg.jpg"
     <!-- This id is used for indexing my loss comments forcedly -->
     <div class="ds-thread"
     {% if site.duoshuo_username == "shenbao" %}
-        data-thread-id="84a8cb32bb6145c66f02a5e76e0ac053"
+        data-thread-id="/about"
     {% else %}
     <!-- U can just use this key generated to index comments at page about -->
         data-thread-key="{{site.duoshuo_username}}/about"
