--- a/about.html
+++ b/about.html
@@ -45,16 +45,18 @@ header-img: "img/config/about-bg.jpg"
     <li>HTML / HTML5</li>
     <li>CSS / CSS3</li>
     <li>LESS / SASS / SCSS / Stylus / PostCSS </li>
-    <li>Jquery / Zepto</li>
-    <li>JavaScript / ES5 / ES6</li>
     <li>Bootstrap </li>
+    <li>JavaScript / ES5 / ES6</li>
+    <li>Jquery / Zepto</li>
     <li>React / React-router / Redux / React-Native</li>
     <li>Webpack / Gulp / FIS3 / rollup</li>
     <li>Nodejs / Express / Koa</li>
     <li>Git / Shell</li>
 </ul>
+<h2 >MY QR CODE</h2>
+<img src="./img/config/myerweima.png" alt="我的二维码">
 
-<br/><br/><br/><br/>
+<br/><br/>
 
 <!-- Handle Language Change -->
 <script type="text/javascript">
