修改 我的二维码 URL 错误

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@ header-img: "img/config/about-bg.jpg"
     <li>Git / Shell</li>
 </ul>
 <h2 >MY QR CODE</h2>
-<img src="./img/config/myerweima.png" alt="我的二维码">
+<img src="/img/config/myerweima.png" alt="我的二维码">
 
 <br/><br/>
 
