--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@ header-img: "img/config/about-bg.jpg"
 </ul>
 <h2 >MY QR CODE</h2>
 <img src="/img/config/myerweima.png" alt="我的二维码">
-
+注：添加时请备注姓名！！！
 <br/><br/>
 
 <!-- Handle Language Change -->
