--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@ header-img: "img/config/about-bg.jpg"
     <li>Nodejs / Express / Koa</li>
     <li>Git / Shell</li>
 </ul>
-<h2 >MY QR CODE</h2>
+<h2 >QR CODE</h2>
 <img src="/img/config/myerweima.png" alt="我的二维码">
 注：添加时请备注姓名！！！
 <br/><br/>
