--- a/about.html
+++ b/about.html
@@ -55,7 +55,8 @@ header-img: "img/config/about-bg.jpg"
 </ul>
 <h2 >QR CODE</h2>
 <img src="/img/config/myerweima.png" alt="我的二维码">
-注：添加时请备注姓名！！！
+<p>注：添加时请备注姓名！！！</p>
+
 <br/><br/>
 
 <!-- Handle Language Change -->
