修改 ANOUT QR IMG

--- a/about.html
+++ b/about.html
@@ -55,7 +55,10 @@ header-img: "img/config/about-bg.jpg"
 </ul>
 <h2 >QR CODE</h2>
 <p>注：添加时请备注姓名！！！</p>
-<img src="/img/config/myerweima.png" alt="我的二维码">
+<img src="/img/config/myerweima-QQ.png" alt="我的QQ二维码">
+<img src="/img/config/myerweima-wechat.png" alt="我的微信二维码">
+
+
 
 <br/><br/>
 
