--- a/archives.html
+++ b/archives.html
@@ -2,7 +2,7 @@
 layout: page
 title : Archives
 description: "文章归档"
-header-img: "img/page2-bg.jpg"
+header-img: "img/config/archives-bg.jpg"
 ---
 
 	{% for post in site.posts  %}
