--- a/tags.html
+++ b/tags.html
@@ -5,7 +5,7 @@ description: keep hungry keep foolish
 header-img: "img/config/tag-bg.jpg"
 ---
 
-<!-- Page Header -->
+ <!--Page Header 
 <header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
     <div class="container">
         <div class="row">
@@ -17,7 +17,7 @@ header-img: "img/config/tag-bg.jpg"
             </div>
         </div>
     </div>
-</header>
+</header>-->
 
 <!-- Main Content -->
 <div class="container">
