Tags layout: page

--- a/tags.html
+++ b/tags.html
@@ -22,7 +22,7 @@ header-img: "img/config/tag-bg.jpg"
 <!-- Main Content -->
 <div class="container">
 	<div class="row">
-		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 post-container">
             <!-- 标签云 -->
 			<div id='tag_cloud' class="tags">
 				{% for tag in site.tags %}
