404 description-en: "This is not the web page you are looking for."

--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 description: "你来到了没有知识的荒原 :("
+description-en: "This is not the web page you are looking for."
 header-img: "img/config/404-bg.jpg"
 permalink: /404.html
 ---
@@ -14,6 +15,7 @@ permalink: /404.html
 				<div class="site-heading" id="tag-heading">
 					<h1>404</h1>
 					<span class="subheading">{{ page.description }}</span>
+					<span class="subheading">{{ description-en }}</span>
 				</div>
 			</div>
 		</div>
