404 description-en: "This is not the web page you are looking for."

--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@ permalink: /404.html
 				<div class="site-heading" id="tag-heading">
 					<h1>404</h1>
 					<span class="subheading">{{ page.description }}</span>
-					<span class="subheading">{{ description-en }}</span>
+					<span class="subheading">{{ page.description-en }}</span>
 				</div>
 			</div>
 		</div>
