--- a/404.html
+++ b/404.html
@@ -16,6 +16,8 @@ permalink: /404.html
 					<h1>404</h1>
 					<span class="subheading">{{ page.description }}</span>
 					<span class="subheading">{{ page.description-en }}</span>
+					<style>a { color: white;}</style>
+					<a href="/" style=><h3 >Click to Home</h3></a>
 				</div>
 			</div>
 		</div>
