.nav>li>a padding: 10px 0

--- a/categories.html
+++ b/categories.html
@@ -52,3 +52,9 @@ header-img: "img/config/categories-bg.jpg"
 </div>
 
 <div class="clearfix"></div>
+
+<style>
+  .nav>li>a {
+    padding: 10px 0px;
+  }
+</style>
