.nav-tabs-vertical>li>a padding: 10px 0

--- a/categories.html
+++ b/categories.html
@@ -54,7 +54,7 @@ header-img: "img/config/categories-bg.jpg"
 <div class="clearfix"></div>
 
 <style>
-  .nav-tabs-vertical>.nav>li>a {
+  .nav-tabs-vertical>li>a {
     padding: 10px 0px;
   }
 </style>
