cheage css and main by shenbao date

--- a/archives.html
+++ b/archives.html
@@ -12,11 +12,15 @@ header-img: "img/config/archives-bg.jpg"
 		{% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
 
 		{% if forloop.first %}
-		<legend id="{{this_year}}-{{this_month}}">{{this_year}} {{this_month}}</legend>
+		<legend id="{{this_year}}-{{this_month}}">
+			<b>
+				{{this_year}} {{this_month}}
+			</b>
+		</legend>
 		<ul>
 		{% endif %}
 
-		<li><span>{{ post.date | date: "%F" }}</span> &raquo; <a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
+		<li><span>{{ post.date | date: "%F" }}</span> <b class='raqu'> &raquo;</b> <a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
 
 		{% if forloop.last %}
 		</ul>
