--- a/categories.html
+++ b/categories.html
@@ -41,7 +41,7 @@ header-img: "img/config/categories-bg.jpg"
   {% for item in (0..site.tags.size) %}{% unless forloop.last %}
     {% capture this_word %}{{ tag_words[item] | strip_newlines }}{% endcapture %}
     <div class="tab-pane" id="{{ this_word | replace:' ','-' }}-ref">
-      <h3 style="margin-top: 0px">{{ this_word }}</h3>
+      <h3 class="color-0085a1" style="margin-top: 0px">{{ this_word }}</h3>
       <ul class="list-unstyled">
         {% for post in site.tags[this_word] %}{% if post.title != null %}
           <li><a href="{{ site.BASE_PATH }}{{post.url}}">{{post.title}}</a> <span class="text-muted"> &raquo;  {{ post.date | date: "%F" }}</span></li>
