about me add city and css

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About Me"
-description: "Hey, this is ShenBao."
+description: "Hey, I'm ShenBao. Web Developer."
 header-img: "img/config/about-bg.jpg"
 ---
 
@@ -18,20 +18,21 @@ header-img: "img/config/about-bg.jpg"
     <blockquote><p>不管路走了多远<br>
     错了就要重新返回</p></blockquote>
 
-    <p>Hey，我是<strong>沈宝</strong>，web developer. </p>
+    <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao(沈宝)</a></strong>，Web Developer. </p>
 
 </div>
 
 <!-- English Version -->
 <div class="en post-container">
 
-    <p>Hi, I am <strong>ShenBao</strong>，web developer. </p>
+     <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao(沈宝)</a></strong>，Web Developer. </p>
 
 </div>
 
-<h2 >INTRODUCTION</h2>
+<h2 class="color-0085a1">INTRODUCTION</h2>
 <ul>
     <li><strong>Name: </strong><a href="https://github.com/Shenbao">ShenBao</a></li>
+    <li><strong>City: </strong>BeiJing,China</li>
     <li><strong>Mail: </strong>shenbaoone@gmail.com</li>
     <li><strong>QQ、WeChat: </strong>1351814223</li>
     <li><strong>Blog: </strong><a href="https://shenbao.github.io">在线博客</a></li>
@@ -40,7 +41,7 @@ header-img: "img/config/about-bg.jpg"
     <li><strong>GitHub: </strong><a href="https://github.com/ShenBao">https://github.com/ShenBao</a></li>
 </ul>
 
-<h2 >TECHNOLOGY</h2>
+<h2 class="color-0085a1">TECHNOLOGY</h2>
 <ul>
     <li>HTML / HTML5</li>
     <li>CSS / CSS3</li>
@@ -53,7 +54,7 @@ header-img: "img/config/about-bg.jpg"
     <li>Nodejs / Express / Koa</li>
     <li>Git / Shell</li>
 </ul>
-<h2 >QR CODE</h2>
+<h2 class="color-0085a1">QR CODE</h2>
 <p>注：添加时请备注姓名！！！</p>
 <img src="/img/config/myerweima-QQ.png" alt="我的QQ二维码">
 <img src="/img/config/myerweima-wechat.png" alt="我的微信二维码">
