add about me 生活除了代码 还有诗和远方

--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 ---
 layout: page
 title: "About Me"
-description: "Hey, I'm ShenBao. Web Developer."
+description: "生活除了代码,还有诗和远方!"
 header-img: "img/config/about-bg.jpg"
 ---
-
+<!--description: "Hey, I'm ShenBao. Web Developer."-->
 <!-- Language Selector -->
 <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
     <option value="0" selected> 中文 Chinese </option>
