--- a/about.html
+++ b/about.html
@@ -31,21 +31,44 @@ header-img: "img/config/about-bg.jpg"
 
 <h2 class="color-0085a1">INTRODUCTION</h2>
 <ul>
-    <li><strong>Name: </strong><a href="https://github.com/Shenbao">ShenBao</a></li>
-    <li><strong>City: </strong>BeiJing,China</li>
-    <li><strong>Mail: </strong>shenbaoone@gmail.com</li>
-    <li><strong>QQ、WeChat: </strong>1351814223</li>
-    <li><strong>Blog: </strong><a href="https://shenbao.github.io">在线博客</a></li>
-    <li><strong>原博客: </strong><a href="https://shenbao.github.io/blog">查看</a></li>
-    <li><strong>React技术栈: </strong><a href="https://shenbao.github.io/ishehui">查看</a></li>
-    <li><strong>GitHub: </strong><a href="https://github.com/ShenBao">https://github.com/ShenBao</a></li>
+    <li>
+        <strong>Name: </strong>
+        <a  class="color-0085a1" href="https://github.com/Shenbao">ShenBao</a>
+    </li>
+    <li>
+        <strong>City: </strong>
+        BeiJing,China
+    </li>
+    <li>
+        <strong>Mail: </strong>
+        <a class="color-0085a1" href="mailto:shenbaoone@gmail.com">shenbaoone@gmail.com</a>
+    </li>
+    <li>
+        <strong>QQ、WeChat: </strong>1351814223
+    </li>
+    <li>
+        <strong>Blog: </strong>
+        <a class="color-0085a1" href="https://shenbao.github.io">在线博客</a>
+    </li>
+    <li>
+        <strong>原博客: </strong>
+        <a  class="color-0085a1" href="https://shenbao.github.io/blog">查看</a>
+    </li>
+    <li>
+        <strong>React技术栈: </strong>
+        <a  class="color-0085a1" href="https://shenbao.github.io/ishehui">查看</a>
+    </li>
+    <li>
+        <strong>GitHub: </strong>
+        <a  class="color-0085a1" href="https://github.com/ShenBao">https://github.com/ShenBao</a>
+    </li>
 </ul>
 
 <h2 class="color-0085a1">TECHNOLOGY</h2>
 <ul>
     <li>HTML / HTML5</li>
     <li>CSS / CSS3</li>
-    <li>LESS / SASS / SCSS / Stylus / PostCSS </li>
+    <li>LESS / SASS / SCSS </li>
     <li>Bootstrap </li>
     <li>JavaScript / ES5 / ES6</li>
     <li>Jquery / Zepto</li>
