--- a/about.html
+++ b/about.html
@@ -50,21 +50,21 @@ header-img: "img/config/about-bg.jpg"
         <strong>Blog: </strong>
         <a class="color-0085a1" href="https://shenbao.github.io">在线博客</a>
     </li>
-    <li>
+    <!--<li>
         <strong>原博客: </strong>
         <a  class="color-0085a1" href="https://shenbao.github.io/blog">查看</a>
     </li>
     <li>
         <strong>React技术栈: </strong>
         <a  class="color-0085a1" href="https://shenbao.github.io/ishehui">查看</a>
-    </li>
+    </li>-->
     <li>
         <strong>GitHub: </strong>
         <a  class="color-0085a1" href="https://github.com/ShenBao">https://github.com/ShenBao</a>
     </li>
 </ul>
 
-<h2 class="color-0085a1">TECHNOLOGY</h2>
+<!--<h2 class="color-0085a1">TECHNOLOGY</h2>
 <ul>
     <li>HTML / HTML5</li>
     <li>CSS / CSS3</li>
@@ -76,7 +76,7 @@ header-img: "img/config/about-bg.jpg"
     <li>Webpack / Gulp / FIS3 / rollup</li>
     <li>Nodejs / Express / Koa</li>
     <li>Git / Shell</li>
-</ul>
+</ul>-->
 <h2 class="color-0085a1">QR CODE</h2>
 <p>注：添加时请备注姓名！！！</p>
 <img src="/img/config/myerweima-QQ.png" alt="我的QQ二维码">
