--- a/archives.html
+++ b/archives.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title : Archives
-description: "文章归档"
+description: "左眼没有见过右眼一面，不懂安慰，只懂陪它落泪。"
 header-img: "img/config/archives-bg.jpg"
 ---
 
