add tags 生活可以无尽平庸，但总要有梦想！

--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Tags
-description: keep hungry keep foolish
+description: "生活可以无尽平庸，但总要有梦想！"
 header-img: "img/config/tag-bg.jpg"
 ---
 
