--- a/categories.html
+++ b/categories.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Categories
-description: "少抱怨，多思考，未来更美好！ -狼叔"
+description: "少抱怨，多思考，未来更美好！"
 header-img: "img/config/categories-bg.jpg"
 ---
 
