--- a/categories.html
+++ b/categories.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Categories
-description: "少抱怨，多思考，未来更美好！"
+description: "世界上没有不劳而获的事，一分耕耘一分收获！"
 header-img: "img/config/categories-bg.jpg"
 ---
 
