--- a/about.html
+++ b/about.html
@@ -50,11 +50,11 @@ header-img: "img/config/about-bg.jpg"
         <strong>Blog: </strong>
         <a class="color-0085a1" href="https://shenbao.github.io">在线博客</a>
     </li>
-    <!--<li>
-        <strong>原博客: </strong>
+    <li>
+        <strong>技术文档: </strong>
         <a  class="color-0085a1" href="https://shenbao.github.io/blog">查看</a>
     </li>
-    <li>
+    <!--<li>
         <strong>React技术栈: </strong>
         <a  class="color-0085a1" href="https://shenbao.github.io/ishehui">查看</a>
     </li>-->
