update about me

--- a/about.html
+++ b/about.html
@@ -59,6 +59,14 @@ header-img: "img/config/about-bg.jpg"
         <a  class="color-0085a1" href="https://shenbao.github.io/ishehui">查看</a>
     </li>-->
     <li>
+        <strong>微博: </strong>
+        <a  class="color-0085a1" href="http://weibo.com/ShenBaoPro">Hbx沈宝</a>
+    </li>
+    <li>
+        <strong>知乎: </strong>
+        <a  class="color-0085a1" href="https://www.zhihu.com/people/shenbao">沈宝</a>
+    </li>
+    <li>
         <strong>GitHub: </strong>
         <a  class="color-0085a1" href="https://github.com/ShenBao">https://github.com/ShenBao</a>
     </li>
