--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@ header-img: "img/config/about-bg.jpg"
     </li>
 </ul>
 
-<!--<h2 class="color-0085a1">TECHNOLOGY</h2>
+<h2 class="color-0085a1">TECHNOLOGY</h2>
 <ul>
     <li>HTML / HTML5</li>
     <li>CSS / CSS3</li>
@@ -83,8 +83,8 @@ header-img: "img/config/about-bg.jpg"
     <li>React / React-router / Redux / React-Native</li>
     <li>Webpack / Gulp / FIS3 / rollup</li>
     <li>Nodejs / Express / Koa</li>
-    <li>Git / Shell</li>
-</ul>-->
+    <li>Git / SVN / Shell</li>
+</ul>
 <h2 class="color-0085a1">QR CODE</h2>
 <p>注：添加时请备注姓名！！！</p>
 <img src="/img/config/myerweima-QQ.png" alt="我的QQ二维码">
