--- a/about.html
+++ b/about.html
@@ -83,6 +83,7 @@ header-img: "img/config/about-bg.jpg"
     <li>React / React-router / Redux / React-Native</li>
     <li>Webpack / Gulp / FIS3 / rollup</li>
     <li>Nodejs / Express / Koa</li>
+    <li>doT.js / Jade / Handlebarsjs /</li>
     <li>Git / SVN / Shell</li>
 </ul>
 <h2 class="color-0085a1">QR CODE</h2>
