update about me

--- a/about.html
+++ b/about.html
@@ -88,8 +88,8 @@ header-img: "img/config/about-bg.jpg"
 </ul>
 <h2 class="color-0085a1">QR CODE</h2>
 <p>注：添加时请备注姓名！！！</p>
-<img src="/img/config/myerweima-QQ.png" alt="我的QQ二维码">
-<img src="/img/config/myerweima-wechat.png" alt="我的微信二维码">
+<img src="/img/config/myerweima-QQ-1.png" alt="我的QQ二维码" width="240">
+<img src="/img/config/myerweima-wechat-1.png" alt="我的微信二维码" width="240">
 
 <br/><br/>
 
