update about me

--- a/about.html
+++ b/about.html
@@ -46,14 +46,6 @@ header-img: "img/config/about-bg.jpg"
     <li>
         <strong>QQ、WeChat: </strong>1351814223
     </li>
-    <li>
-        <strong>Blog: </strong>
-        <a class="color-0085a1" href="https://shenbao.github.io">在线博客</a>
-    </li>
-    <li>
-        <strong>技术文档: </strong>
-        <a  class="color-0085a1" href="https://shenbao.github.io/blog">查看</a>
-    </li>
     <!--<li>
         <strong>React技术栈: </strong>
         <a  class="color-0085a1" href="https://shenbao.github.io/ishehui">查看</a>
@@ -69,6 +61,14 @@ header-img: "img/config/about-bg.jpg"
     <li>
         <strong>GitHub: </strong>
         <a  class="color-0085a1" href="https://github.com/ShenBao">https://github.com/ShenBao</a>
+    </li>
+    <li>
+        <strong>Blog: </strong>
+        <a class="color-0085a1" href="https://shenbao.github.io">在线博客</a>
+    </li>
+    <li>
+        <strong>API文档: </strong>
+        <a  class="color-0085a1" href="https://shenbao.github.io/blog">查看</a>
     </li>
 </ul>
 
