add hypercomments_userid to config and others pages hypercomments_userid

--- a/about.html
+++ b/about.html
@@ -160,21 +160,24 @@ header-img: "img/config/about-bg.jpg"
 <!-- disqus 公共JS代码 end -->
 {% endif %}
 
+{% if site.hypercomments_userid %}
 <!--hypercomments 评论-->
 <div id="hypercomments_widget"></div>
 <script type="text/javascript">
+var hypercomments_userid = "{{site.hypercomments_userid}}";
 _hcwp = window._hcwp || [];
-_hcwp.push({widget:"Stream", widget_id: 91931});
+_hcwp.push({widget:"Stream", widget_id: hypercomments_userid});
 (function() {
 if("HC_LOAD_INIT" in window)return;
 HC_LOAD_INIT = true;
 var lang = (navigator.language || navigator.systemLanguage || navigator.userLanguage || "en").substr(0, 2).toLowerCase();
 var hcc = document.createElement("script"); hcc.type = "text/javascript"; hcc.async = true;
-hcc.src = ("https:" == document.location.protocol ? "https" : "http")+"://w.hypercomments.com/widget/hc/91931/"+lang+"/widget.js";
+hcc.src = ("https:" == document.location.protocol ? "https" : "http")+"://w.hypercomments.com/widget/hc/"+hypercomments_userid+"/"+lang+"/widget.js";
 var s = document.getElementsByTagName("script")[0];
 s.parentNode.insertBefore(hcc, s.nextSibling);
 })();
 </script>
 <a href="http://hypercomments.com" class="hc-link" title="comments widget">comments powered by HyperComments</a>
 <!--hypercomments end-->
+{% endif %}
 
