--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@ header-img: "img/config/about-bg.jpg"
     </li>
     <li>
         <strong>GitHub: </strong>
-        <a  class="color-0085a1" href="https://github.com/ShenBao">https://github.com/ShenBao</a>
+        <a  class="color-0085a1" href="https://github.com/ShenBao">ShenBao</a>
     </li>
     <li>
         <strong>Blog: </strong>
