--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@ header-img: "img/config/about-bg.jpg"
         <a  class="color-0085a1" href="https://shenbao.github.io/ishehui">查看</a>
     </li>
 </ul>
-<!--
+
 <h2 class="color-0085a1">TECHNOLOGY</h2>
 <ul>
     <li>HTML / HTML5</li>
@@ -80,12 +80,12 @@ header-img: "img/config/about-bg.jpg"
     <li>Bootstrap </li>
     <li>JavaScript / ES5 / ES6</li>
     <li>Jquery / Zepto</li>
-    <li>React / React-router / Redux / React-Native</li>
+    <li>React / React-Router / Redux / React-Native</li>
     <li>Webpack / Gulp / FIS3 / rollup</li>
     <li>Nodejs / Express / Koa</li>
     <li>doT.js / Jade / Handlebarsjs </li>
     <li>Git / SVN / Shell</li>
-</ul>-->
+</ul>
 <h2 class="color-0085a1">QR CODE</h2>
 <p>注：添加时请备注姓名！！！</p>
 <img src="/img/config/myerweima-QQ-1.png" alt="我的QQ二维码" width="240">
