--- a/about.html
+++ b/about.html
@@ -15,8 +15,10 @@ header-img: "img/config/about-bg.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>不管路走了多远<br>
-    错了就要重新返回</p></blockquote>
+    <blockquote>
+        <p>不管路走了多远<br>
+        错了就要重新返回</p>
+    </blockquote>
 
     <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao(沈宝)</a></strong>，Web Developer. </p>
 
@@ -25,7 +27,7 @@ header-img: "img/config/about-bg.jpg"
 <!-- English Version -->
 <div class="en post-container">
 
-     <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao(沈宝)</a></strong>，Web Developer. </p>
+     <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao</a></strong>，Web Developer. </p>
 
 </div>
 
