--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@ header-img: "img/config/about-bg.jpg"
     </li>
     <li>
         <strong>微博: </strong>
-        <a  class="color-0085a1" href="http://weibo.com/ShenBaoPro">Hbx沈宝</a>
+        <a  class="color-0085a1" href="http://weibo.com/ShenBaoPro">沈宝</a>
     </li>
     <li>
         <strong>知乎: </strong>
