--- a/about.html
+++ b/about.html
@@ -65,6 +65,10 @@ header-img: "img/config/about-bg.jpg"
         <a class="color-0085a1" href="https://shenbao.github.io">在线博客</a>
     </li>
     <li>
+        <strong>开发笔记: </strong>
+        <a class="color-0085a1" href="https://shenbao.github.io/shenbao-notes/">notes</a>
+    </li>
+    <li>
         <strong>API文档: </strong>
         <a  class="color-0085a1" href="https://shenbao.github.io/blog">查看</a>
     </li>
