--- a/about.html
+++ b/about.html
@@ -20,14 +20,14 @@ header-img: "img/config/about-bg.jpg"
         错了就要重新返回</p>
     </blockquote>
 
-    <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao(沈宝)</a></strong>，Web Developer. </p>
+    <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao(沈宝)</a></strong>， Web App Developer. </p>
 
 </div>
 
 <!-- English Version -->
 <div class="en post-container">
 
-     <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao</a></strong>，Web Developer. </p>
+     <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao</a></strong>， Web App Developer. </p>
 
 </div>
 
@@ -62,11 +62,11 @@ header-img: "img/config/about-bg.jpg"
     </li>
     <li>
         <strong>Blog: </strong>
-        <a class="color-0085a1" href="https://shenbao.github.io">在线博客</a>
+        <a class="color-0085a1" href="https://shenbao.github.io">ShenBao Blog</a>
     </li>
     <li>
         <strong>开发笔记: </strong>
-        <a class="color-0085a1" href="https://shenbao.github.io/shenbao-notes/">notes</a>
+        <a class="color-0085a1" href="https://shenbao.github.io/shenbao-notes/">shenbao-notes</a>
     </li>
     <li>
         <strong>API文档: </strong>
