--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ header-img: "img/config/about-bg.jpg"
         错了就要重新返回</p>
     </blockquote>
 
-    <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao(沈宝)</a></strong>， Web App Developer. </p>
+    <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao(沈宝)</a></strong>, Web App Developer. </p>
 
 </div>
 
