--- a/about.html
+++ b/about.html
@@ -30,7 +30,10 @@ header-img: "img/config/about-bg.jpg"
      <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao</a></strong>， Web App Developer. </p>
 
 </div>
-
+<h2 class="color-0085a1">I SAID</h2>
+<p>
+    自命有理想的手艺人。秉承技术源自生活服务于生活的原则，喜欢尝试各种新玩意儿，强迫症重度患者（匠心精神），乐于分享！ 
+</p>
 <h2 class="color-0085a1">INTRODUCTION</h2>
 <ul>
     <li>
