--- a/about.html
+++ b/about.html
@@ -84,9 +84,9 @@ header-img: "img/config/about-bg.jpg"
 <ul>
     <li>HTML / HTML5</li>
     <li>CSS / CSS3</li>
-    <li>LESS / SASS / SCSS </li>
+    <li>LESS / SASS / SCSS  / POSTCSS</li>
     <li>Bootstrap </li>
-    <li>JavaScript / ES5 / ES6</li>
+    <li>JavaScript / ES5 / ES6+</li>
     <li>Jquery / Zepto</li>
     <li>React / React-Router / Redux / React-Native</li>
     <li>Webpack / Gulp / FIS3 / rollup</li>
