--- a/about.html
+++ b/about.html
@@ -92,6 +92,7 @@ header-img: "img/config/about-bg.jpg"
     <li>React / React-Router / Redux / React-Native</li>
     <li>Webpack / Gulp / FIS3 / rollup</li>
     <li>Nodejs / Express / Koa</li>
+    <li>mysql / MongoDB</li>
     <li>doT.js / Jade / Handlebarsjs </li>
     <li>Git / SVN / Shell</li>
 </ul>
