--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@ header-img: "img/config/about-bg.jpg"
     </li>
     <li>
         <strong>Mail: </strong>
-        <a class="color-0085a1" href="mailto:shenbaoone@gmail.com">shenbaoone@gmail.com</a>
+        <a class="color-0085a1" href="mailto:shenbao.china@gmail.com">shenbao.china@gmail.com</a>
     </li>
     <li>
         <strong>QQ、WeChat: </strong>1351814223
