--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@ header-img: "img/config/about-bg.jpg"
     <li>Webpack / Gulp / FIS3 / rollup</li>
     <li>Nodejs / Express / Koa</li>
     <li>mysql / MongoDB</li>
-    <li>doT.js / Jade / Handlebarsjs </li>
+    <li>doT.js / ejs / Jade / Handlebarsjs </li>
     <li>Git / SVN / Shell</li>
 </ul>
 <h2 class="color-0085a1">QR CODE</h2>
