--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ header-img: "img/config/about-bg.jpg"
 <!-- English Version -->
 <div class="en post-container">
 
-     <p>Hey，I'm <strong><a href="https://github.com/Shenbao">ShenBao</a></strong>， Web App Developer. </p>
+     <p>Hey,I'm <strong><a href="https://github.com/Shenbao">ShenBao</a></strong>, Web App Developer. </p>
 
 </div>
 
