--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ header-img: "img/config/about-bg.jpg"
 </div>
 
 <p>
-    自命有理想的手艺人。秉承技术源自生活服务于生活的原则，喜欢尝试各种新玩意儿，强迫症重度患者（匠心精神），乐于分享！ 
+    自命有理想的手艺人，理想现实主义设计师。秉承技术源自生活服务于生活的原则，喜欢尝试各种新玩意儿，强迫症重度患者（匠心精神），乐于分享！ 
 </p>
 
 <h2 class="color-0085a1">INTRODUCTION</h2>
