--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@ header-img: "img/config/about-bg.jpg"
     <li>JavaScript / ES5 / ES6+</li>
     <li>Jquery / Zepto</li>
     <li>React / React-Router / Redux / React-Native</li>
-    <li>Webpack / Gulp / FIS3 / rollup</li>
+    <li>Webpack / Gulp / FIS3 / Grunt / rollup</li>
     <li>Nodejs / Express / Koa</li>
     <li>mysql / MongoDB</li>
     <li>doT.js / ejs / Jade / Handlebarsjs </li>
