--- a/search.html
+++ b/search.html
@@ -2,8 +2,8 @@
 layout: page
 title: search
 description: "宁愿做过了后悔，也不要错过了后悔！"
-header-img: "img/config/tag-bg.jpg"
+header-img: "img/common/1007.jpg"
 ---
 
-
-
+<h1>search page</h1>
+<p>暂时未开放</p>
