--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@ header-img: "img/config/about-bg.jpg"
     </li>
     <li>
         <strong>开发笔记: </strong>
-        <a class="color-0085a1" href="https://shenbao.github.io/shenbao-notes/">shenbao-notes</a>
+        <a class="color-0085a1" href="https://shenbao.github.io/shenbao-learn-notes">shenbao-learn-notes</a>
     </li>
     <li>
         <strong>API文档: </strong>
