--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@ header-img: "img/config/about-bg.jpg"
     <li>LESS / SASS / SCSS  / POSTCSS</li>
     <li>Bootstrap </li>
     <li>JavaScript / ES5 / ES6+</li>
-    <li>Jquery / Zepto</li>
+    <li>jQuery / Zepto</li>
     <li>React / React-Router / Redux / React-Native</li>
     <li>Webpack / Gulp / FIS3 / Grunt / rollup</li>
     <li>Nodejs / Express / Koa</li>
