--- a/about.html
+++ b/about.html
@@ -92,6 +92,7 @@ header-img: "img/config/about-bg.jpg"
     <li>JavaScript / ES5 / ES6+</li>
     <li>jQuery / Zepto</li>
     <li>React / React-Router / Redux / React-Native</li>
+    <li>Angular</li>
     <li>Webpack / Gulp / FIS3 / Grunt / rollup</li>
     <li>Nodejs / Express / Koa</li>
     <li>mysql / MongoDB</li>
