--- a/about.html
+++ b/about.html
@@ -96,6 +96,7 @@ header-img: "img/config/about-bg.jpg"
     <li>Webpack / Gulp / FIS3 / Grunt / rollup</li>
     <li>Nodejs / Express / Koa</li>
     <li>mysql / MongoDB</li>
+    <li>http</li>
     <li>doT.js / ejs / Jade / Handlebarsjs </li>
     <li>Git / SVN / Shell</li>
 </ul>
