--- a/about.html
+++ b/about.html
@@ -65,6 +65,10 @@ header-img: "img/config/about-bg.jpg"
         <a  class="color-0085a1" href="https://github.com/ShenBao">ShenBao</a>
     </li>
     <li>
+        <strong>博客模板: </strong>
+        <a class="color-0085a1" href="https://shenbao.github.io/xiaobao-blog/">xiaobao Blog</a>
+    </li>
+    <li>
         <strong>Blog: </strong>
         <a class="color-0085a1" href="https://shenbao.github.io">ShenBao Blog</a>
     </li>
@@ -72,14 +76,14 @@ header-img: "img/config/about-bg.jpg"
         <strong>开发笔记: </strong>
         <a class="color-0085a1" href="https://shenbao.github.io/shenbao-learn-notes">shenbao-learn-notes</a>
     </li>
-    <li>
+    <!-- <li>
         <strong>API文档: </strong>
         <a  class="color-0085a1" href="https://shenbao.github.io/blog">查看</a>
     </li>
     <li>
         <strong>React技术栈: </strong>
         <a  class="color-0085a1" href="https://shenbao.github.io/ishehui">查看</a>
-    </li>
+    </li> -->
 </ul>
 
 
@@ -87,7 +91,7 @@ header-img: "img/config/about-bg.jpg"
 <ul>
     <li>HTML / HTML5</li>
     <li>CSS / CSS3</li>
-    <li>LESS / SASS / SCSS  / POSTCSS</li>
+    <li>LESS / SCSS  / POSTCSS</li>
     <li>Bootstrap </li>
     <li>JavaScript / ES5 / ES6+</li>
     <li>jQuery / Zepto</li>
