--- a/about.html
+++ b/about.html
@@ -73,6 +73,10 @@ header-img: "img/config/about-bg.jpg"
         <a class="color-0085a1" href="https://shenbao.github.io">ShenBao Blog</a>
     </li>
     <li>
+        <strong>博客模板 : </strong>
+        <a class="color-0085a1" href="https://shenbao.github.io/xiaobao-blog/home">XiaoBao Blog</a>
+    </li>
+    <li>
         <strong>开发笔记: </strong>
         <a class="color-0085a1" href="https://shenbao.github.io/shenbao-learn-notes">shenbao-learn-notes</a>
     </li>
