--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@ layout: page
 description: "少抱怨，多思考，未来更美好！"
 ---
 
-<p>公告：这里暂时将不再更新，更多移步至
+<p>公告1：这里暂时将不再更新，更多移步至
     <a href="/shenbao-learn-notes" 
         style="color: #0085a1;">shenbao-learn-notes</a>
+</p>
+<p>公告2：最近将切换模板</a>
 </p>
 
 {% for post in paginator.posts %}
