--- a/about.html
+++ b/about.html
@@ -95,14 +95,14 @@ header-img: "img/config/about-bg.jpg"
     <li>Bootstrap </li>
     <li>JavaScript / ES5 / ES6+</li>
     <li>jQuery / Zepto</li>
-    <li>React / React-Router / Redux / React-Native</li>
+    <li>React / React-Router / Redux</li>
     <li>Angular</li>
     <li>Webpack / Gulp / FIS3 / Grunt / rollup</li>
     <li>Nodejs / Express / Koa</li>
     <li>mysql / MongoDB</li>
     <li>http</li>
     <li>doT.js / ejs / Jade / Handlebarsjs </li>
-    <li>Git / SVN / Shell</li>
+    <li>Git / SVN / Shell / Nginx</li>
 </ul>
 <h2 class="color-0085a1">QR CODE</h2>
 <p>注：添加时请备注姓名！！！</p>
