--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@ header-img: "img/config/about-bg.jpg"
 </ul>
 
 
-<h2 class="color-0085a1">TECHNOLOGY</h2>
+<!-- <h2 class="color-0085a1">TECHNOLOGY</h2>
 <ul>
     <li>HTML / HTML5</li>
     <li>CSS / CSS3</li>
@@ -103,7 +103,8 @@ header-img: "img/config/about-bg.jpg"
     <li>http</li>
     <li>doT.js / ejs / Jade / Handlebarsjs </li>
     <li>Git / SVN / Shell / Nginx</li>
-</ul>
+</ul> -->
+
 <h2 class="color-0085a1">QR CODE</h2>
 <p>注：添加时请备注姓名！！！</p>
 <img src="/img/config/myerweima-QQ-1.png" alt="我的QQ二维码" width="240">
